@@ -138,7 +138,7 @@
   <!-- OT::EfficientGlobalOptimization parameters -->
   <EfficientGlobalOptimization-DefaultAEITradeoff               value_float="1.0"           />
   <EfficientGlobalOptimization-DefaultCorrelationLengthFactor   value_float="1.0"           />
-  <EfficientGlobalOptimization-DefaultImprovementFactor         value_float="1.0"           />
+  <EfficientGlobalOptimization-DefaultImprovementFactor         value_float="0.0"           />
   <EfficientGlobalOptimization-DefaultMultiStartExperimentSize  value_int="100" />
   <EfficientGlobalOptimization-DefaultMultiStartNumber          value_int="20"  />
   <EfficientGlobalOptimization-DefaultParameterEstimationPeriod value_int="1"   />
